# desktop

./: .gitignore  BUILD.md  Cargo.toml  README.md  build_deb.sh
.github/workflows/: app-release.yml  release.yml
app/src/: index.html
app/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: appwindows.json  default.json
app/src-tauri/msix/: AppxManifest.xml  README.md  package-msix.ps1
app/src-tauri/src/: blob_sync.rs  cloudfiles.rs  components.rs  docproxy.rs  drive_push.rs  drive_sync.rs  entity_sync.rs  explorer.rs  lib.rs  main.rs  office_entities.rs  office_sync.rs  wasmoffice.rs
app/src-tauri/webview/: index.html
crates/kubuno-sync/: Cargo.toml
crates/kubuno-sync/src/: api.rs  config.rs  daemon.rs  engine.rs  lib.rs  main.rs  push.rs  store.rs  ws.rs
