[package]
name        = "kubuno-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description  = "Kubuno desktop app — Tauri shell (window + tray) over the sync engine"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
kubuno-sync         = { path = "../../crates/kubuno-sync" }
