[package]
name        = "kubuno-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description  = "Kubuno desktop & mobile app — Tauri shell over the sync engine"

# The Tauri logic lives in a library so it can be shared by the desktop binary
# (main.rs) and the Android/iOS entry points (cdylib/staticlib).
[lib]
name       = "kubuno_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
kubuno-sync         = { path = "../../crates/kubuno-sync" }
ureq                = { version = "2", features = ["json"] }
# Local document proxy (offline-capable web origin): a caching reverse proxy +
# WebSocket bridge to the core, served from a fixed 127.0.0.1 port so the
# embedded web app keeps a stable origin (IndexedDB) online and offline.
axum                = { version = "0.7", features = ["ws"] }
tokio               = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
reqwest-async       = { package = "reqwest", version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# Pinned to 0.21 so its tungstenite Message (String/Vec<u8>) matches axum 0.7's
# ws Message types — trivial conversion in the collab bridge.
tokio-tungstenite   = { version = "0.21", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util        = "0.3"
sha2                = "0.10"
# Local office "documents-core" backend: run the WASM module (SQLite-in-WASI)
# embedded so document CRUD works fully offline, no core round-trip.
wasmtime            = "27"
wasmtime-wasi       = "27"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
uuid   = { version = "1", features = ["v5"] }
# Emit toasts with our own AUMID so they show "Kubuno" + icon, not PowerShell.
tauri-winrt-notification = "0.7"
# Cloud Files API — native sync-status overlays (✓/⟳) on files in Explorer.
windows = { version = "0.61", features = [
  "Win32_Storage_CloudFilters",
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_IO",
  "Win32_System_CorrelationVector",
  # WinRT — shell integration that actually renders the overlays.
  "Storage",
  "Storage_Provider",
  "Storage_Search",
  "Storage_Streams",
  "Security_Cryptography",
  "Foundation",
] }
